# terminal-emulator

./: Cargo.toml  README.md
assets/: aks-terminal.desktop
src/: main.rs
src/app/: mod.rs
src/app/block/: mod.rs
src/app/ui/header/: mod.rs
src/fonts/: mod.rs
src/pty/: mod.rs
src/renderer/: glyph.rs  rect.rs
src/state/: mod.rs
src/terminal/: mod.rs
src/theme/: mod.rs
