[package]
name = "terminal_emulator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
font-kit = "0.14.3"
glyphon = "0.11.0"
pathfinder_geometry = "0.5"
pollster = "0.4.0"
portable-pty = "0.9.0"
vte = "0.15"
wgpu = "29.0.3"
winit = "0.30.13"
